--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; User Id=admin; Password=secret; Database=reactivities"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=reactivities;Integrated Security=True;Trusted_Connection=True;"
   },
   "TokenKey": "super secret key"
 }
